# hmm

./: .gitignore  CMakeLists.txt  README.md
cmake/: hmmConfig.cmake.in
include/: hmm.h
include/hmm/: hmm.h
src/: hmm.cpp
test/: test.cpp
